yaml/jupyter/jupyter-external/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - image: jupyter/minimal-notebook
          name: jupyter
          ports:
            - containerPort: 8888
          workingDir: /scratch/$USER_ID
          volumeMounts:
            - name: home-volume
              mountPath: /home01/$USER_ID
            - name: scratch-volume
              mountPath: /scratch/$USER_ID
      volumes:
        - name: home-volume
          hostPath:
            path: /home01/$USER_ID
            type: Directory
        - name: scratch-volume
          hostPath:
            path: /scratch/$USER_ID
            type: Directory
