yaml/jupyter/jupyter-external/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyter
  name: jupyter
spec:
  ports:
    - name: jupyter
      port: 8888
  selector:
    app: jupyter
  type: NodePort
